Fixed a CSS error and made code more readable

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-iframe.site{ 
-  position:absolute;
-  top:0px;
-  left:0px;
-  right:0px;
-  bottom:0px;
-  border 0px;
-  width:100%;
-  height:100%;
+iframe.site {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  border: 0px;
+  width: 100%;
+  height: 100%;
 }
